test/Fail/Issue7878.agda
-- Reported by Amy

syntax bind e (\ x -> f) = x

-- WAS: internal error
