test/Fail/Issue7878.err
Issue7878.agda:3.28: error: [ParseError]
Malformed syntax declaration: syntax must use holes exactly once
